--- a/reset.css
+++ b/reset.css
@@ -14,3 +14,8 @@
               user-select: none; /* Non-prefixed version, currently
                                     supported by Chrome, Edge, Opera and Firefox */
   }
+
+  html, body {
+    height: 100%;
+    min-height: 100%;
+  }
